--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "pingutil-site",
+  "name": "getdigitize-site",
   "version": "1.0.0",
   "main": "index.js",
+  "description": "GetDigitize - AI-Powered Digital Transformation Solutions",
   "scripts": {
     "tailwind:init": "tailwindcss init",
     "tailwind:dev": "tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
@@ -12,6 +13,5 @@
   "license": "ISC",
   "devDependencies": {
     "tailwindcss": "^3.4.1"
-  },
-  "description": ""
+  }
 }
