--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "tailwind:init": "tailwindcss init",
     "tailwind:dev": "tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
-    "tailwind:build": "NODE_ENV=production tailwindcss -i ./src/input.css -o ./dist/output.css --minify"
+    "tailwind:build": "tailwindcss -i ./src/input.css -o ./dist/output.css --minify"
   },
   "keywords": [],
   "author": "",
